// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSection > snapshot test - closed state 1`] = `
<div>
  <details
    class="
        border-b border-default
        last:border-0
      "
  >
    <summary
      class="
          flex cursor-pointer items-center justify-between px-4 py-3 text-base
          font-medium text-default
          focus-within:bg-stripe
          hover:bg-stripe
          focus:outline-none
        "
    >
      <span
        class="flex items-center gap-2"
      >
        Genres
      </span>
      <svg
        aria-hidden="true"
        class="
            ml-auto size-3 transition-transform
            [[open]>&]:rotate-180
          "
        fill="currentColor"
        viewBox="0 0 12 8"
      >
        <path
          d="M0 1.5L1.5 0 6 4.5 10.5 0 12 1.5 6 7.5z"
        />
      </svg>
    </summary>
    <div
      class="px-4 pb-3"
    >
      <div>
        Filter content here
      </div>
    </div>
  </details>
</div>
`;

exports[`FilterSection > snapshot test - open state (default) 1`] = `
<div>
  <details
    class="
        border-b border-default
        last:border-0
      "
    open=""
  >
    <summary
      class="
          flex cursor-pointer items-center justify-between px-4 py-3 text-base
          font-medium text-default
          focus-within:bg-stripe
          hover:bg-stripe
          focus:outline-none
        "
    >
      <span
        class="flex items-center gap-2"
      >
        Genres
      </span>
      <svg
        aria-hidden="true"
        class="
            ml-auto size-3 transition-transform
            [[open]>&]:rotate-180
          "
        fill="currentColor"
        viewBox="0 0 12 8"
      >
        <path
          d="M0 1.5L1.5 0 6 4.5 10.5 0 12 1.5 6 7.5z"
        />
      </svg>
    </summary>
    <div
      class="px-4 pb-3"
    >
      <div>
        Filter content here
      </div>
    </div>
  </details>
</div>
`;
